--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
     "js-sha256": "^0.9.0",
     "mdbreact": "^4.25.5",
     "node-sass": "^4.13.0",
+    "react-ga": "^3.1.2",
     "react-redux": "^7.1.1",
     "react-redux-firebase": "^2.4.1",
     "react-router-dom": "^5.0.1",
+    "react-scroll-parallax": "^2.3.4",
     "redux": "^4.0.4",
     "redux-firestore": "^0.9.0",
     "redux-thunk": "^2.3.0"
