--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "predeploy": "yarn run build",
-    "deploy": "gh-pages -d build",
+    "deploy": "react-scripts build && firebase deploy",
     "eject": "react-scripts eject"
   },
   "devDependencies": {
