--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
-  "name": "react-mdb-firebase-template",
-  "version": "1.2.0",
+  "name": "inspire-homepage",
+  "version": "1.0.0",
   "private": true,
   "license": "(EUPL-1.2)",
   "homepage": ".",
   "dependencies": {
+    "copy-to-clipboard": "^3.3.1",
     "firebase": "^7.2.0",
     "gh-pages": "^2.2.0",
     "js-sha256": "^0.9.0",
@@ -21,7 +22,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/aichner/React-MDB-Firebase-Template.git"
+    "url": "git+https://github.com/aichner/Inspire-Homepage.git"
   },
   "scripts": {
     "start": "react-scripts start",
